# docai

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
docai/: extract_text_from_doc.py  extractor.py
scripts/: build_index.py  extract.py
src/docai/: __init__.py  extractor.py  models.py  text.py
src/docai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
